<resources>

    <string name="app_name">Assignment 5</string>
    <string name="contactDetail">Contact Detail</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_address_entry">Address Entry</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="firstlastname">First &amp; Last Name</string>
    <string name="address">Address</string>
    <string name="nothing"></string>
    <string name="title_activity_address_console">Address Console</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="totalRecords">Total Records</string>
    <string name="recordNumber">Record Number</string>
    <string name="view">View</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="zip">Zip</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    
</resources>