<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editFirstName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="TextFields" >

    <TextView
        android:id="@+id/textAddressMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing" />

    <ListView
        android:id="@+id/listAddresses"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_weight="0.61"
        android:choiceMode="singleChoice"  
        android:listSelector="@android:color/darker_gray"
        android:scrollbarStyle="insideInset" >

    </ListView>

    <EditText
        android:id="@+id/editRecordNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/recordNumber"
        android:text="@string/nothing" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07" >

        <Button
            android:id="@+id/cmdView"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view" />

        <Button
            android:id="@+id/cmdAdd"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/cmdEdit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <Button
            android:id="@+id/cmdDelete"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>
